ContactUs + Cancel reservation

--- a/front/reservation/reservation.html
+++ b/front/reservation/reservation.html
@@ -310,10 +310,12 @@
                 </div>
                 <div class="infoRest">
                     <div class="groupInpu">
-                        <div class="arrowInput">
-                            <input type="text" placeholder="Select an accasion (optional)">
+                        <div class="accasion">
+                            <span>Select an accasion</span>
                         </div>
-                        <label><input type="text" placeholder="Add a special request "></label>
+                        <div class="specialRequest">
+                            <span>Add a special request</span>
+                        </div>
                     </div>
                     <div class="groupText">
                         <div class="title">
@@ -326,6 +328,71 @@
                             velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam
                             quaerat voluptatem. Ut enim ad minima veniam.</span>
                     </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="modalClose">
+            <div class="groupClose">
+                <div class="closedClose">
+                    <svg width="22" height="22" viewBox="0 0 22 22" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M21 0.999969L0.99995 21"  stroke-width="2" stroke-linecap="round"/>
+                        <path d="M21 21.0001L0.999951 1.00001"  stroke-width="2" stroke-linecap="round"/>
+                        </svg>                    
+                </div>
+                <div class="head">
+                    <div class="logo">
+                        <img src="../img/svg/LogoDeliziosoFull.svg" alt="">
+                    </div>
+                    <div class="groupBtn">
+                        <div class="span">
+                            Sign in
+                        </div>
+                        <div class="span">
+                            Sign up
+                        </div>
+                    </div>
+                </div>
+                <div class="detail">
+                    <div class="imagge">
+                        <img src="../img/png/BackgroundCansel.png" alt="">
+                    </div>
+                    <div class="title">Are you sure you want to cancel the reservation?</div>
+                    <div class="groupDetail">
+                        <div class="item">
+                            <div class="img">
+                                <img src="../img/png/Icon Booking id.png" alt="">
+                            </div>
+                            <span>Booking ID : #123456</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="detailRrsv">
+                    <div class="imgg">
+                        <img src="../img/png/reserve2.png" alt="">
+                    </div>
+                    <div class="gruoudesc">
+                        <div class="title">
+                            Reservation detail
+                        </div>
+                        <div class="item">
+                            <img src="../img/svg/Icon calender.svg" alt="">
+                            <span>Saturday, 28 february 2022</span>
+                        </div>
+                        <div class="item">
+                            <img src="../img/svg/Icon Time.svg" alt="">
+                            <span>04:30 pm</span>
+                        </div>
+                        <div class="item">
+                            <img src="../img/svg/icon people.svg" alt="">
+                            <span>2 people (Standar seating)</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="canselend">
+                    <span>
+                        Cancel reservation
+                    </span>
                 </div>
             </div>
         </div>
