--- a/front/aboutUs/aboutUs.html
+++ b/front/aboutUs/aboutUs.html
@@ -108,7 +108,8 @@
           </div>
         </div>
     </div>
-
+    </div>
+    <div class="container">
   <main class=" ">
     <div class="container">
     <section class="ourRes flex flex-col md:flex-row items-center ">
@@ -164,7 +165,9 @@ Duis aute irure dolor in reprehenderit in voluptate velit esse.
     </section>
   </div>
   </main>
+  </div>
   <footer class="footer">
+    <div class="container">
     <div class="together">
       <div class="firstGroup">
         <div class="logo">
@@ -223,6 +226,7 @@ Duis aute irure dolor in reprehenderit in voluptate velit esse.
       </div>
       <span>2022 Delizioso</span>
     </div>
+  </div>
   </footer>
 </body>
 
