--- a/front/reservation/reservation.html
+++ b/front/reservation/reservation.html
@@ -110,7 +110,7 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container imagge">
         <section class="onlyOne">
             <div class="block">
                 <div class="imagee">
@@ -397,9 +397,9 @@
             </div>
         </div>
     </div>
-    <div class="container">
 
-        <footer class="footer">
+    <footer class="footer">
+            <div class="container">
             <div class="together">
                 <div class="firstGroup">
                     <div class="logo">
@@ -458,8 +458,8 @@
                 </div>
                 <span>2022 Delizioso</span>
             </div>
-        </footer>
-    </div>
+        </div>
+    </footer>
 </body>
 
 </html>
