--- a/front/contactUs/contactUs.html
+++ b/front/contactUs/contactUs.html
@@ -102,16 +102,16 @@
             <div class="groupInputCon">
                 <div class="first">
                     <div class="items">
-                        <input type="text" placeholder="First name">
-                        <input type="text" placeholder="Email address">
+                        <input type="text" placeholder="First name" class="firstName">
+                        <input type="text" placeholder="Email address" class="email">
                     </div>
                     <div class="items">
-                        <input type="text" placeholder="Last name">
-                        <input type="text" placeholder="Subject">
+                        <input type="text" placeholder="Last name"  class="lastName">
+                        <input type="text" placeholder="Subject" class="subject">
                     </div>
                 </div>
                 <div class="secondgroup" contenteditable="true">
-                    <textarea name="" id="" placeholder="Message"></textarea>
+                    <textarea name="" id="" placeholder="Message" class="message"></textarea>
                 </div>
             </div>
             <div class="submit">
