--- a/front/homePage/homePage.html
+++ b/front/homePage/homePage.html
@@ -89,7 +89,7 @@
                     <div class="desc">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Facilisis ultricies at eleifend proin. Congue nibh nulla malesuada ultricies nec quam 
                     </div>
-                    <div class="btn">
+                    <div class="btn SeeOurMenu">
                         See our menu
                     </div>
                 </div>
@@ -229,8 +229,8 @@
                     <span>04:00pm-09:00pm</span>
                 </div>
                 <div class="groupBtn">
-                    <span class="order">Order now</span>
-                    <span class="reserve">Reservation</span>
+                    <span class="order r">Order now</span>
+                    <span class="reserve e">Reservation</span>
                 </div>
             </div>
         </div>
@@ -257,19 +257,18 @@
                 </div>
                 <div class="SecondGroup">
                     <div class="groupText">
-                        <div class="title">Page</div>
+                        <div class="title Page">Page</div>
                         <div class="group">
-                            <span>Home</span>
-                            <span>Menu</span>
-                            <span>Order online</span>
-                            <span>Catering</span>
-                            <span>Reservation</span>
+                            <span class="Home">Home</span>
+                            <span class="Menu">Menu</span>
+                            <span class="Catering">Catering</span>
+                            <span class="Reservation">Reservation</span>
                         </div>
                     </div>
                     <div class="groupText">
                         <div class="title">Information</div>
                         <div class="group">
-                            <span>About us</span>
+                            <span class="About">About us</span>
                             <span>Testimonial</span>
                             <span>Event</span>
                         </div>
