--- a/front/menu/menu.html
+++ b/front/menu/menu.html
@@ -161,24 +161,23 @@
             </div>
         </div>
         <div class="SecondGroup">
-            <div class="groupText">
-                <div class="title">Page</div>
-                <div class="group">
-                    <span>Home</span>
-                    <span>Menu</span>
-                    <span>Order online</span>
-                    <span>Catering</span>
-                    <span>Reservation</span>
-                </div>
+          <div class="groupText">
+            <div class="title Page">Page</div>
+            <div class="group">
+                <span class="Home">Home</span>
+                <span class="Menu">Menu</span>
+                <span class="Catering">Catering</span>
+                <span class="Reservation">Reservation</span>
             </div>
-            <div class="groupText">
-                <div class="title">Information</div>
-                <div class="group">
-                    <span>About us</span>
-                    <span>Testimonial</span>
-                    <span>Event</span>
-                </div>
+        </div>
+        <div class="groupText">
+            <div class="title">Information</div>
+            <div class="group">
+                <span class="About">About us</span>
+                <span>Testimonial</span>
+                <span>Event</span>
             </div>
+        </div>
             <div class="groupText">
                 <div class="title">Get in touch</div>
                 <div class="group">
