--- a/front/reservation/reservation.html
+++ b/front/reservation/reservation.html
@@ -406,19 +406,18 @@
                 </div>
                 <div class="SecondGroup">
                     <div class="groupText">
-                        <div class="title">Page</div>
+                        <div class="title Page">Page</div>
                         <div class="group">
-                            <span>Home</span>
-                            <span>Menu</span>
-                            <span>Order online</span>
-                            <span>Catering</span>
-                            <span>Reservation</span>
+                            <span class="Home">Home</span>
+                            <span class="Menu">Menu</span>
+                            <span class="Catering">Catering</span>
+                            <span class="Reservation">Reservation</span>
                         </div>
                     </div>
                     <div class="groupText">
                         <div class="title">Information</div>
                         <div class="group">
-                            <span>About us</span>
+                            <span class="About">About us</span>
                             <span>Testimonial</span>
                             <span>Event</span>
                         </div>
